workspace = { members = ["guava-ir"] }
[package]
name = "guava-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guava-parser = { path = "guava-parser" }
guava-ir = { path = "guava-ir" }
clap = { version = "4.5.2", features = ["derive"] }
